--- a/index.html
+++ b/index.html
@@ -1,53 +1,75 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joe’s Awakening Delight | トップページ</title>
   <style>
     body {
+      font-family: 'Noto Sans JP', sans-serif;
       background-color: #f9f9f4;
       color: #333;
-      font-family: 'Noto Sans JP', sans-serif;
-      text-align: center;
-      padding: 60px 20px;
+      margin: 0;
+      padding: 40px 20px;
+      line-height: 1.8;
     }
+
     h1 {
+      text-align: center;
+      color: #2c3e50;
       font-size: 24px;
       margin-bottom: 40px;
     }
+
     ul {
-      list-style: none;
-      padding: 0;
-      max-width: 400px;
+      max-width: 500px;
       margin: 0 auto;
+      padding: 0;
+      list-style: none;
     }
+
     li {
-      margin: 16px 0;
+      background: #ffffff;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 16px 20px;
+      margin-bottom: 16px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: background 0.3s;
     }
+
+    li:hover {
+      background: #eafff2;
+    }
+
     a {
-      display: inline-block;
       text-decoration: none;
-      color: #ffffff;
-      background: #30c37c;
-      padding: 12px 24px;
-      border-radius: 6px;
-      transition: background 0.3s ease;
+      color: #006644;
+      font-weight: bold;
+      display: block;
     }
-    a:hover {
-      background: #249a5e;
+
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      color: #999;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <h1>Joe’s Awakening Delight サイトへようこそ</h1>
+  <h1>Joe’s Awakening Delight</h1>
   <ul>
-    <li><a href="new-home.html">ホーム</a></li>
-    <li><a href="new-services.html">サービス案内</a></li>
-    <li><a href="new-voices.html">お客様の声</a></li>
-    <li><a href="new-faq.html">よくある質問</a></li>
-    <li><a href="new-session-price.html">セッションと料金</a></li>
-    <li><a href="new-privacy-policy.html">プライバシーポリシー</a></li>
+    <li><a href="new-home.html">▶ ホーム</a></li>
+    <li><a href="new-services.html">▶ サービス案内</a></li>
+    <li><a href="new-voices.html">▶ お客様の声</a></li>
+    <li><a href="new-faq.html">▶ よくある質問</a></li>
+    <li><a href="new-session-price.html">▶ セッションと料金</a></li>
+    <li><a href="new-privacy-policy.html">▶ プライバシーポリシー</a></li>
   </ul>
+
+  <footer>
+    &copy; 2025 Joe’s Awakening Delight. All rights reserved.
+  </footer>
 </body>
 </html>
