new-homeページを最新に更新

--- a/index.html
+++ b/index.html
@@ -58,18 +58,22 @@
   </style>
 </head>
 <body>
-  <h1>Joe’s Awakening Delight</h1>
-  <ul>
-    <li><a href="new-home.html">▶ ホーム</a></li>
-    <li><a href="new-services.html">▶ サービス案内</a></li>
-    <li><a href="new-voices.html">▶ お客様の声</a></li>
-    <li><a href="new-faq.html">▶ よくある質問</a></li>
-    <li><a href="new-session-price.html">▶ セッションと料金</a></li>
-    <li><a href="new-privacy-policy.html">▶ プライバシーポリシー</a></li>
-  </ul>
-
+  <header>
+    <h1>Joe’s Awakening Delight</h1>
+    <p>サイト内リンク一覧</p>
+  </header>
+  <main>
+    <ul class="link-list">
+      <li><a href="new-home.html">ホーム</a></li>
+      <li><a href="new-services.html">サービス案内</a></li>
+      <li><a href="new-voices.html">お客様の声</a></li>
+      <li><a href="new-faq.html">よくある質問</a></li>
+      <li><a href="new-session-price.html">セッションと料金</a></li>
+      <li><a href="new-privacy-policy.html">プライバシーポリシー</a></li>
+    </ul>
+  </main>
   <footer>
-    &copy; 2025 Joe’s Awakening Delight. All rights reserved.
+    <p>&copy; 2025 Joe’s Awakening Delight</p>
   </footer>
 </body>
 </html>
