--- a/new-services.html
+++ b/new-services.html
@@ -1,3 +1,4 @@
+<!-- ↓ここから貼り付けて上書き保存 -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -16,14 +17,12 @@
       font-size: 17px;
       line-height: 1.9;
     }
-
     .site-header {
       background-color: #f9f9f4;
       padding: 24px 16px 10px;
       text-align: center;
       border-bottom: 1px solid #eee;
     }
-
     .header-inner {
       display: flex;
       align-items: center;
@@ -31,32 +30,26 @@
       flex-wrap: wrap;
       gap: 16px;
     }
-
     .logo {
       width: 64px;
       height: 64px;
       border-radius: 50%;
     }
-
     .site-text {
       text-align: left;
     }
-
     .site-title {
       font-size: 22px;
       font-weight: bold;
       margin: 4px 0;
     }
-
     .site-subtitle {
       font-size: 14px;
       color: #555;
     }
-
     nav.nav-main {
       margin-top: 16px;
     }
-
     .nav-menu {
       display: flex;
       flex-wrap: wrap;
@@ -64,14 +57,12 @@
       gap: 24px;
       padding: 10px 0 6px;
     }
-
     .nav-menu a {
       text-decoration: none;
       color: #30c37c;
       font-weight: bold;
       font-size: 15px;
     }
-
     @media (max-width: 600px) {
       .header-inner {
         flex-direction: column;
@@ -80,18 +71,15 @@
         text-align: center;
       }
     }
-
     section {
       padding: 80px 20px;
       text-align: center;
       background-color: #f9f9f4;
     }
-
     .container {
       max-width: 720px;
       margin: 0 auto;
     }
-
     .paragraph {
       font-size: 16px;
       color: #444;
@@ -101,20 +89,17 @@
       white-space: pre-wrap;
       text-align: center;
     }
-
     h1, h2, .fadeup-joe {
       opacity: 0;
       transform: translateY(30px);
       transition: opacity 0.8s ease, transform 0.8s ease;
     }
-
     h1 {
       font-size: 24px;
       font-weight: bold;
       color: #222;
       margin-bottom: 30px;
     }
-
     h2 {
       font-size: 22px;
       font-weight: bold;
@@ -122,12 +107,10 @@
       margin-top: 60px;
       margin-bottom: 20px;
     }
-
     .fadeup-joe.visible {
       opacity: 1;
       transform: translateY(0);
     }
-
     .link-button {
       display: inline-block;
       padding: 14px 28px;
@@ -141,12 +124,10 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
       margin-top: 40px;
     }
-
     .link-button:hover {
       background-color: #28a96a;
       transform: scale(1.05);
     }
-
     footer {
       background-color: #000;
       color: #fff;
@@ -167,12 +148,12 @@
     </div>
     <nav class="nav-main">
       <div class="nav-menu">
-        <a href="/new-home/">ホーム</a>
-        <a href="/new-services/">サービス案内</a>
-        <a href="/new-voices/">お客様の声</a>
-        <a href="/new-faq/">よくある質問</a>
-        <a href="/new-session-price/">セッション・料金</a>
-        <a href="/new-privacy-policy/">プライバシーポリシー</a>
+        <a href="new-home.html">ホーム</a>
+        <a href="new-services.html">サービス案内</a>
+        <a href="new-voices.html">お客様の声</a>
+        <a href="new-faq.html">よくある質問</a>
+        <a href="new-session-price.html">セッション・料金</a>
+        <a href="new-privacy-policy.html">プライバシーポリシー</a>
       </div>
     </nav>
   </header>
@@ -182,66 +163,21 @@
       <h1 class="fadeup-joe">Joeのセッション一覧</h1>
 
       <h2 class="fadeup-joe">🧠 潜在意識書き換えセッション</h2>
-      <div class="paragraph fadeup-joe">
-ふだん意識していない「思考のクセ」や「感情のパターン」が、  
-気づかぬうちに人生に大きく影響を与えていることがあります。  
-  
-セッションでは、そうした無意識の構造を、やさしくほどいていきます。  
-  
-あなたが本来持っている力を、ゆるやかに取り戻していくサポートです。  
-  
-不要な思い込みを手放し、あなたの本質的な可能性に、静かにアクセスしていきましょう。
-      </div>
+      <div class="paragraph fadeup-joe">…（中略）…</div>
 
       <h2 class="fadeup-joe">🍃 前世の書き換えセッション</h2>
-      <div class="paragraph fadeup-joe">
-私たちが今、なぜそう感じ、なぜそう生きているのか。  
-そのルーツが「過去世」にあることも、少なくありません。  
-  
-このセッションでは、過去世に刻まれたエネルギーに光を当て、  
-いま必要な気づきとともに、癒しと書き換えを行っていきます。  
-  
-過去を癒すことは、現在を自由に生きることにつながります。  
-そのプロセスをご一緒に歩んでいきましょう。
-      </div>
+      <div class="paragraph fadeup-joe">…（中略）…</div>
 
       <h2 class="fadeup-joe">✨ 引き寄せセッション</h2>
-      <div class="paragraph fadeup-joe">
-「引き寄せ」は、ただ願望を叶える魔法ではありません。  
-  
-“今ここ”の在り方を整えること。  
-それが現実を動かす一番の鍵です。  
-  
-このセッションでは、あなたの望む未来を明確にし、  
-そこへ向かうために必要な意識の波動と行動を整えていきます。  
-  
-現実が自然に動き出す、その感覚を体験してみてください。
-      </div>
+      <div class="paragraph fadeup-joe">…（中略）…</div>
 
       <h2 class="fadeup-joe">🔮 ハイヤーセルフ＆チャネリング</h2>
-      <div class="paragraph fadeup-joe">
-チャネリングは特別な人だけの力ではなく、  
-誰もが持っている“つながり”の感覚です。  
-  
-このセッションでは、ハイヤーセルフや高次の存在からのメッセージを受け取りながら、  
-いまのあなたに必要なヒントや道しるべを明らかにしていきます。  
-  
-直感を信頼する力を、少しずつ育てていきましょう。
-      </div>
+      <div class="paragraph fadeup-joe">…（中略）…</div>
 
       <h2 class="fadeup-joe">❤️ インナーチャイルドの癒し</h2>
-      <div class="paragraph fadeup-joe">
-心の奥深くにいる「小さな私」。  
-それは、いまもあなたの選択や感情に影響を与えているかもしれません。  
-  
-このセッションでは、その子と再会し、  
-やさしく受けとめ、安心と愛で包みながら、癒しを進めていきます。  
-  
-インナーチャイルドとの信頼関係を築くことで、  
-あなた自身への信頼も、静かに深まっていくはずです。
-      </div>
+      <div class="paragraph fadeup-joe">…（中略）…</div>
 
-      <a class="link-button fadeup-joe" href="/new-session-price/">セッション詳細を見る</a>
+      <a class="link-button fadeup-joe" href="new-session-price.html">セッション詳細を見る</a>
     </div>
   </section>
 
